# stylestash

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  env.dev.example
app/: Dockerfile  Dockerfile.prod  manage.py  pyproject.toml
app/stylestash/: asgi.py  settings.py  urls.py  wsgi.py
app/users/: models.py  serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py  0002_alter_user_email.py
app/users/services/: auth.py
nginx/: nginx.conf
